--- a/generic.html
+++ b/generic.html
@@ -40,7 +40,7 @@
 								</li>
 
 								<li>
-									<span class="image"><img src="images/pic02.png" width="275" height="175" alt="" /></span>
+									<span class="image"><img src="images/pic02.PNG" width="275" height="175" alt="" /></span>
 									<h3>Release</h3>
 									<p>
 										A VR game designed to help people process anger. Walk through a destruction room and smash items with your bat, then
