--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 											Worked On: Game Design, Game Narrative, Game Programming</p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic02.png" width="275" height="175" alt="" /></span>
+										<span class="image"><img src="images/pic02.PNG" width="275" height="175" alt="" /></span>
 										<h3>Release</h3>
 										<p>A VR game designed to help people process anger. Walk through a destruction room and smash items with your bat, then 
 										calm down with some music therepy by playing your own meladies. Worked On: Game Design, Game Programming</p>
