--- a/generic.html
+++ b/generic.html
@@ -31,7 +31,7 @@
 							<ul class="features">
 								<li>
 									<span class="image"><img src="images/pic01.png" width="275" height="175" alt="" /></span>
-									<h3>Heart of Hampstead</h3>
+									<h3>Heart of Hampstead (2022)</h3>
 									<p>
 										A third-person adventure game where the player finds clues to a mysterious item and decides what they beleive it is.
 										Worked On: Game Design, Game Narrative, Game Programming
@@ -40,31 +40,44 @@
 								</li>
 
 								<li>
+									<span class="image"><img src="images/goml.png" width="275" height="175" alt="" /></span>
+									<h3>Get Off My Lawn (2023)</h3>
+									<p>
+										Protect your lawn by spraying intruders with your hose, send your dog to get the toys off of your lawn, keep yourself
+										rocking in your chair to stay awake, and keep drinking your beverage to keep your energy up. This project is using an alt-controller made
+										of a rocking chair and other elements to play the game. Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of 
+										IndieCade 2023 Night Games! Worked On: Game Design, Game Audio
+									</p>
+								</li>
+
+								<li>
 									<span class="image"><img src="images/pic02.PNG" width="275" height="175" alt="" /></span>
-									<h3>Release</h3>
+									<h3>Release (2022)</h3>
 									<p>
 										A VR game designed to help people process anger. Walk through a destruction room and smash items with your bat, then
 										calm down with some music therepy by playing your own meladies. Worked On: Game Design, Game Programming
 									</p>
 									<a href="https://github.com/NieceyX/SeriousGame" class="button">Repository</a>
 								</li>
-								<li>
-									<span class="image"><img src="images/pic03.png" width="275" height="175" alt="" /></span>
-									<h3>Escape Area 51</h3>
-									<p>
-										An iteration from the arcade game, Moon Patrol. Play as an alien escaping Earth and destroy everyone blocking your path.
-										Worked On: Game Design, Game Programming
-									</p>
-									<a href="https://github.com/NieceyX/ArcadeGame" class="button">Repository</a>
-								</li>
+
 							</ul>
 						</section>
 
 						<section id="content" class="main">
 							<ul class="features">
 								<li>
+									<span class="image"><img src="images/pic03.png" width="275" height="175" alt="" /></span>
+									<h3>Escape Area 51 (2022)</h3>
+									<p>
+										An iteration from the arcade game, Moon Patrol. Play as an alien escaping Earth and destroy everyone blocking your path.
+										Worked On: Game Design, Game Programming
+									</p>
+									<a href="https://github.com/NieceyX/ArcadeGame" class="button">Repository</a>
+								</li>
+
+								<li>
 									<span class="image"><img src="images/pic07.jpg" width="275" height="175" alt="" /></span>
-									<h3>Elevator Survival</h3>
+									<h3>Elevator Survival (2022)</h3>
 									<p>
 										Based on the arcade game Elevator Action. The player defeates as many enemies as they can while Twitch users set off different
 										Traps and enemies through Twitch Integration. Survive as long as possible, and destroy as many enemies as you can.
@@ -72,40 +85,16 @@
 									</p>
 									<a href="https://github.com/jialiangzhao/Rapid4_Team1" class="button">Repository</a>
 								</li>
-								<li>
-									<span class="image"><img src="images/pic04.png" width="275" height="175" alt="" /></span>
-									<h3>Stalk Photo</h3>
-									<p>
-										A first-person horror game where the player muct find evidence through the forest and take pictures of each item.
-										The player can switch between normal and night vision to navigate through the forest. Someone may be chasing you though.
-										This was the first game I had made, and was worked on solo.
-										Worked On: Game Design, Game Programming
-									</p>
-									<a href="https://github.com/NieceyX/FPStalkPhoto" class="button">Repository</a>
-								</li>
+
 								<li>
 									<span class="image"><img src="images/pic05.png" width="275" height="175" alt="" /></span>
-									<h3>Guerriere</h3>
+									<h3>Guerriere (2020)</h3>
 									<p>
 										A third-person wave, fighting game. Use a sword and spell to fight waves of zombies and monsters, use health potions to heal up,
 										and defeat both levels. The second game I ever made, and was worked on solo.
 										Worked On: Game Design, Game Programming
 									</p>
 									<a href="https://github.com/NieceyX/ThirdPersonGame" class="button">Repository</a>
-								</li>
-							</ul>
-						</section>
-
-						<section id="content" class="main">
-							<ul class="features">
-								<li>
-									<span class="image"><img src="images/pic06.jpg" width="275" height="175" alt="" /></span>
-									<h3>Get Off My Lawn</h3>
-									<p>
-										WORK IN PROGRESS! Protect your lawn by spraying intruders with your hose, send your dog to get the toys off of your lawn, keep yourself
-										rocking in your chair to stay awake, and keep drinking your beverage to keep your energy up. This project is using an alt-controller made
-										of a rocking chair and other elements to play the game. Worked On: Game Design, Game Audio
-									</p>
 								</li>
 							</ul>
 						</section>
