--- a/generic.html
+++ b/generic.html
@@ -45,9 +45,13 @@
 									<p>
 										Protect your lawn by spraying intruders with your hose, send your dog to get the toys off of your lawn, keep yourself
 										rocking in your chair to stay awake, and keep drinking your beverage to keep your energy up. This project is using an alt-controller made
-										of a rocking chair and other elements to play the game. Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of 
+										of a rocking chair and other elements to play the game. Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of
 										IndieCade 2023 Night Games! Worked On: Game Design, Game Audio
 									</p>
+									<audio controls>
+										<source src="audio/goml2.wav" type="audio/wav">
+										Your browser does not support the audio element.
+									</audio>
 								</li>
 
 								<li>
@@ -97,6 +101,14 @@
 									<a href="https://github.com/NieceyX/ThirdPersonGame" class="button">Repository</a>
 								</li>
 							</ul>
+
+							<footer class="major">
+								<ul class="actions special">
+									<li><a href="index.html" class="button">Home</a></li>
+									<li><a href="audio.html" class="button">Audio Work</a></li>
+								</ul>
+							</footer>
+
 						</section>
 
 					</div>
