--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">See More</a></li>
+										<li><a href="generic.html" class="button">Projects</a></li>
+										<li><a href="audio.html" class="button">Audio</a></li>
 									</ul>
 								</footer>
 							</section>
