--- a/audio.html
+++ b/audio.html
@@ -23,6 +23,15 @@
 						<p>Here is some audio from game projects and more</p>
 					</header>
 
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="generic.html">Projects</a></li>
+							<li><a href="audio.html" class="active">Audio</a></li>
+						</ul>
+					</nav>
+
 				<!-- Main -->
 					<div id="main">
 
@@ -87,12 +96,6 @@
 								</li>
 
 							</ul>
-							<footer class="major">
-								<ul class="actions special">
-									<li><a href="index.html" class="button">Home</a></li>
-									<li><a href="generic.html" class="button">Projects</a></li>
-								</ul>
-							</footer>
 						</section>
 
 
