--- a/generic.html
+++ b/generic.html
@@ -22,7 +22,14 @@
 						<h1>Projects</h1>
 						<p>Here is a more comprehensive list of projects I have worked on</p>
 					</header>
-
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="generic.html" class="active">Projects</a></li>
+							<li><a href="audio.html">Audio</a></li>
+						</ul>
+					</nav>
 				<!-- Main -->
 					<div id="main">
 
@@ -101,13 +108,6 @@
 									<a href="https://github.com/NieceyX/ThirdPersonGame" class="button">Repository</a>
 								</li>
 							</ul>
-
-							<footer class="major">
-								<ul class="actions special">
-									<li><a href="index.html" class="button">Home</a></li>
-									<li><a href="audio.html" class="button">Audio Work</a></li>
-								</ul>
-							</footer>
 
 						</section>
 
