--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">Projects</a></li>
+							<li><a href="index.html" class="active">Home</a></li>
+							<li><a href="generic.html">Projects</a></li>
+							<li><a href="audio.html">Audio</a></li>
 						</ul>
 					</nav>
 
@@ -74,12 +75,6 @@
 										 Worked On: Game Design, Game Programming</p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Projects</a></li>
-										<li><a href="audio.html" class="button">Audio</a></li>
-									</ul>
-								</footer>
 							</section>
 
 						
