--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
 											Worked On: Game Design, Game Narrative, Game Programming</p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic02.PNG" width="275" height="175" alt="" /></span>
-										<h3>Release</h3>
-										<p>A VR game designed to help people process anger. Walk through a destruction room and smash items with your bat, then 
-										calm down with some music therepy by playing your own meladies. Worked On: Game Design, Game Programming</p>
+										<span class="image"><img src="images/goml.png" width="275" height="175" alt="" /></span>
+										<h3>Get Off My Lawn (2023)</h3>
+										<p>
+											Protect your lawn by spraying intruders with your hose, send your dog to get the toys off of your lawn, keep yourself
+											rocking in your chair to stay awake, and keep drinking your beverage to keep your energy up. This project is using an alt-controller made
+											of a rocking chair and other elements to play the game. Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of
+											IndieCade 2023 Night Games! Worked On: Game Design, Game Audio
+										</p>
 									</li>
 									<li>
 										<span class="image"><img src="images/pic03.png" width="275" height="175" alt="" /></span>
