--- a/audio.html
+++ b/audio.html
@@ -27,7 +27,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Projects</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html" class="active">Audio</a></li>
 						</ul>
 					</nav>
