--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html" class="active">Home</a></li>
-							<li><a href="generic.html">Projects</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
 						</ul>
 					</nav>
@@ -57,28 +57,19 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="image"><img src="images/pic01.png"  width="275" height="175" alt="" /></span>
+										<span class="image"><img src="images/pic01.png" width="275" height="175" alt="" /></span>
 										<h3>Heart of Hampstead</h3>
-										<p>A third-person adventure game where the player finds clues to a mysterious item and decides what they beleive it is.
-											Worked On: Game Design, Game Narrative, Game Programming</p>
 									</li>
 									<li>
 										<span class="image"><img src="images/goml.png" width="275" height="175" alt="" /></span>
 										<h3>Get Off My Lawn (2023)</h3>
-										<p>
-											Protect your lawn by spraying intruders with your hose, send your dog to get the toys off of your lawn, keep yourself
-											rocking in your chair to stay awake, and keep drinking your beverage to keep your energy up. This project is using an alt-controller made
-											of a rocking chair and other elements to play the game. Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of
-											IndieCade 2023 Night Games! Worked On: Game Design, Game Audio
-										</p>
 									</li>
 									<li>
 										<span class="image"><img src="images/pic03.png" width="275" height="175" alt="" /></span>
 										<h3>Escape Area 51</h3>
-										<p>An iteration from the arcade game, Moon Patrol. Play as an alien escaping Earth and destroy everyone blocking your path.
-										 Worked On: Game Design, Game Programming</p>
 									</li>
 								</ul>
+								<a href="generic.html" class="button">See More</a>
 							</section>
 
 						
