--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										<h3>Escape Area 51</h3>
 									</li>
 								</ul>
-								<a href="generic.html" class="button">See More</a>
+								<a href="projects.html" class="button">See More</a>
 							</section>
 
 						
