--- a/escapearea51.html
+++ b/escapearea51.html
@@ -28,6 +28,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
 				<!-- Main -->
@@ -36,17 +37,27 @@
 						<!-- Content -->
 						<section id="content" class="main">
 							<ul class="features">
-									<span class="image">
-										<img src="images/pic03.png" width="550" height="350" alt="" />
-									</span>
+								<span class="image">
+									<img src="images/pic03.png" width="550" height="350" alt="" />
+									<video width="320" height="240" controls>
+										<source src="videos/ArcadeGame.mp4" type="video/mp4">
+										Your browser does not support the video tag.
+									</video>
+								</span>
 									<li>
 										<p>
 											Worked On: Game Design, Game Programming
 										</p>
-										<video width="320" height="240" controls>
-											<source src="videos/ArcadeGame.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<p>
+											This was the very first project we did for my graduate program. We were prompted to iterate upon an 
+											old arcade game. The game we chose was Moon Patrol
+										</p>
+										<p>
+											This was a smaller group, and we all had a hand in choosing what game we itereated on, as well as the design for our own game. 
+											I was the one to program much of the game, and I worked closely with the others to design it as well. We went through a lot of different ideas 
+											before landing upon aliens and Moon Patrol.
+										</p>
+										
 										<a href="https://github.com/NieceyX/ArcadeGame" class="button">Repository</a>
 									</li>
 								</ul>
