--- a/guerriere.html
+++ b/guerriere.html
@@ -31,6 +31,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
 				<!-- Main -->
@@ -39,17 +40,30 @@
 						<!-- Content -->
 						<section id="content" class="main">
 							<ul class="features">
-									<span class="image">
-										<img src="images/pic05.png" width="550" height="350" alt="" />
-									</span>
+								<span class="image">
+									<img src="images/pic05.png" width="550" height="350" alt="" />
+									<video width="320" height="240" controls>
+										<source src="videos/GuerriereDemo.mp4" type="video/mp4">
+										Your browser does not support the video tag.
+									</video>
+								</span>
 									<li>
 										<p>
+											Made in Unity
 											Worked On: Game Design, Game Programming
 										</p>
-										<video width="320" height="240" controls>
-											<source src="videos/GuerriereDemo.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<p>
+											This project came out of my undergrad. What was originally supposed to be a VR and AR Video Game class became a 
+											normal Unity game class once Covid hit.
+										</p>
+										<p>
+											This project was my final project for the class, it was one of the first full experience games I had created. The requirements were 
+											pretty loose for this project. I used free assets available on the Unity store.
+										</p>
+										<p>
+											For the project, I programmed much of the code for the game, and designed the levels, where enemies spawned, and where items the player 
+											could pick up were located. It was a solo project, so everything except for free assets and some other bits were all done by me.
+										</p>
 										<a href="https://github.com/NieceyX/ThirdPersonGame" class="button">Repository</a>
 									</li>
 								</ul>
