--- a/parkhourror.html
+++ b/parkhourror.html
@@ -19,14 +19,16 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Projects</h1>
-						<p>Here is a larger list of projects I have worked on. Click on any of the images to learn more!</p>
+						<h1>Parkhourror (WIP - Release 2024)</h1>
+						<p>
+							Make your way through a city trying to destroy you. Use your parkour skills to get out in any way you can.
+						</p>
 					</header>
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html" class="active">Projects</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
@@ -38,65 +40,25 @@
 						<section id="content" class="main">
 							<ul class="features">
 								<li>
-									<span class="image">
-										<a href="parkhourror.html">
-											<img src="images/pic05.jpg" width="275" height="175" alt="" class="darker" />
-										</a>
-									</span>
-									<h3>Parkhourror (WIP - Release 2024)</h3>
-								</li>
+									<p>
+										A parkour horror game. Currently being worked on.
+										Working on: Production, Sound Design
+									</p>
+									<p>
+										So far, I have taken on the role of associate producer, as well as the team's sound designer. I have managed Jira and team
+										stand-ups. Along with this, I have designed sounds and music to be used within the game. Everything is still a work-in-progress, though.
+									</p>
+									<audio controls>
+										<source src="audio/protoSample1.wav" type="audio/wav">
+										Your browser does not support the audio element.
+									</audio>
+									<audio controls>
+										<source src="audio/protoSample2.wav" type="audio/wav">
+										Your browser does not support the audio element.
+									</audio>
 
-								<li>
-									<span class="image">
-										<a href="goml.html">
-											<img src="images/goml.png" width="275" height="175" alt="" class="darker" />
-										</a>
-									</span>
-									<h3>Get Off My Lawn (2023)</h3>
 								</li>
-
-								<li>
-									<span class="image">
-										<a href="release.html">
-											<img src="images/pic02.PNG" width="275" height="175" alt="" class="darker" />
-										</a>
-									</span>
-									<h3>Release (2022)</h3>
-								</li>
-
-								
-							</ul>
-						</section>
-
-						<section id="content" class="main">
-							<ul class="features">
-								<li>
-									<span class="image">
-										<a href="escapearea51.html">
-											<img src="images/pic03.png" width="275" height="175" alt="" class="darker" />
-										</a>
-									</span>
-									<h3>Escape Area 51 (2022)</h3>
-								</li>
-
-								<li>
-									<span class="image">
-										<a href="heartofhampstead.html">
-											<img src="images/pic01.png" width="275" height="175" alt="" class="darker" />
-										</a>
-									</span>
-									<h3>Heart of Hampstead (2022)</h3>
-								</li>
-
-								<li>
-									<span class="image">
-										<a href="guerriere.html">
-											<img src="images/pic05.png" width="275" height="175" alt="" class="darker" />
-										</a>
-									</span>
-									<h3>Guerriere (2020)</h3>
-								</li>
-							</ul>
+								</ul>
 						</section>
 
 					</div>
