--- a/release.html
+++ b/release.html
@@ -22,7 +22,7 @@
 						<h1>Release (2022)</h1>
 						<p>
 							A VR game designed to help people process anger. Walk through a destruction room and smash items with your bat, then
-							calm down with some music therepy by playing your own meladies.
+							calm down with some music therepy by playing your own melodies.
 						</p>
 					</header>
 				<!-- Nav -->
@@ -31,6 +31,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
 				<!-- Main -->
@@ -44,7 +45,17 @@
 									</span>
 									<li>
 										<p>
+											Made in Unreal
 											Worked On: Game Design, Game Programming
+										</p>
+										<p>
+											The team disscused as a whole what our direction was going to be, given the restriction of it being a serious game. We decided on a rage room and
+											a music therepy room.
+										</p>
+										<p>
+											I helped design and programmed the music orbs. After the player destroys what they would like in the glass rage room, they move on to the soothing
+											music room. Being in VR, the player is able to reach out and touch the orbs. Doing so plays a note, and they can make their own melody to the background
+											music by touching many of the orbs in whatever pattern they like.
 										</p>
 										<a href="https://github.com/NieceyX/SeriousGame" class="button">Repository</a>
 									</li>
