--- a/goml.html
+++ b/goml.html
@@ -32,6 +32,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
 				<!-- Main -->
@@ -40,22 +41,29 @@
 						<!-- Content -->
 						<section id="content" class="main">
 							<ul class="features">
-									<span class="image">
-										<img src="images/goml.png" width="550" height="350" alt="" />
-									</span>
+								<span class="image">
+									<img src="images/goml.png" width="550" height="350" alt="" />
+									<video width="320" height="240" controls>
+										<source src="videos/GetOffMyLawnGameplay.mp4" type="video/mp4">
+										Your browser does not support the video tag.
+									</video>
+								</span>
 									<li>
 										<p>
 											Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of
 											IndieCade 2023 Night Games! Worked On: Game Design, Game Audio
 										</p>
+										<p>
+											This is an Alt-Ctrl game for my second semester graduate course. On the project, I helped work on design along with the 
+											rest of the team. This includes a dog mechanic that we ultimately had to cut. I also worked on the sound design for the game, 
+											including all the music and SFX for the game. The main menu page, cinematic, and tutorial page were also programmed and designed by me - 
+											not inlcuding the art.
+										</p>
 										<audio controls>
 											<source src="audio/goml2.wav" type="audio/wav">
 											Your browser does not support the audio element.
 										</audio>
-										<video width="320" height="240" controls>
-											<source src="videos/GetOffMyLawnGameplay.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										
 									</li>
 								</ul>
 						</section>
