--- a/heartofhampstead.html
+++ b/heartofhampstead.html
@@ -28,6 +28,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
 				<!-- Main -->
@@ -36,17 +37,28 @@
 						<!-- Content -->
 						<section id="content" class="main">
 							<ul class="features">
-									<span class="image">
-										<img src="images/pic01.png" width="550" height="350" alt="" />
-									</span>
+								<span class="image">
+									<img src="images/pic01.png" width="550" height="350" alt="" />
+									<video width="320" height="240" controls>
+										<source src="videos/HeartofHampsteadBuild1.mp4" type="video/mp4">
+										Your browser does not support the video tag.
+									</video>
+								</span>
 									<li>
 										<p>
+											Made in Unity
 											Worked On: Game Design, Game Narrative, Game Programming, etc.
 										</p>
-										<video width="320" height="240" controls>
-											<source src="videos/HeartofHampsteadBuild1.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<p>
+											This project was for my undergrad capstone class. I designed and planned out the project myself, and got the opportunity to 
+											work with an amazing artist that wanted to work on a game for their own capstone project.
+										</p>
+										<p>
+											As the lead on the project, I designed the short narrative behind the game, as well as many other 
+											aspects including a beliefs system that the player uses at the end of each day, the narrative and character dialogue, and
+											part of the level design. Along with this, I did all of the programming for the game.
+										</p>
+										
 										<a href="https://github.com/NieceyX/HeartofHampstead" class="button">Repository</a>
 									</li>
 								</ul>
