--- a/resume.html
+++ b/resume.html
@@ -20,59 +20,27 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Deniece Radford</h1>
-						<p>Game Developer<br />
+						<p>Game Designer<br />
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html" class="active">Home</a></li>
+							<li><a href="index.html" >Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="audio.html">Audio</a></li>
-							<li><a href="resume.html">Resume</a></li>
+							<li><a href="resume.html" class="active">Resume</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Introduction -->
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>Introduction</h2>
-										</header>
-										<p>
-											Hello! I am a Game Developer who focuses on game design and programming.
-											I started with my undergraduate degree in Computer Science, and am now working towards my
-											Masters degree at the University of Utah - Entertainment Arts and Engineering (MEAE).
-										</p>
-									</div>
-									<span class="image"><img src="images/face.jfif" alt="" /></span>
-								</div>
-							</section>
-
 						<!-- First Section -->
 							<section id="first" class="main special">
-								<header class="major">
-									<h2>Projects</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="image"><img src="images/pic01.png" width="275" height="175" alt="" /></span>
-										<h3>Heart of Hampstead (2022)</h3>
-									</li>
-									<li>
-										<span class="image"><img src="images/goml.png" width="275" height="175" alt="" /></span>
-										<h3>Get Off My Lawn (2023)</h3>
-									</li>
-									<li>
-										<span class="image"><img src="images/pic03.png" width="275" height="175" alt="" /></span>
-										<h3>Escape Area 51 (2022)</h3>
-									</li>
-								</ul>
-								<a href="projects.html" class="button">See More</a>
+								<object data="images/portfolioResume.pdf" type="application/pdf" width="100%" height="1000px">
+									<p>Unable to display PDF file. <a href="images/portfolioResume.pdf">Download</a> instead.</p>
+								</object>
 							</section>
 
 						
