--- a/goml.html
+++ b/goml.html
@@ -40,32 +40,88 @@
 
 						<!-- Content -->
 						<section id="content" class="main">
-							<ul class="features">
-								<span class="image">
-									<img src="images/goml.png" width="550" height="350" alt="" />
-									<video width="320" height="240" controls>
-										<source src="videos/GetOffMyLawnGameplay.mp4" type="video/mp4">
-										Your browser does not support the video tag.
-									</video>
-								</span>
-									<li>
-										<p>
-											Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of
-											IndieCade 2023 Night Games! Worked On: Game Design, Game Audio
-										</p>
-										<p>
-											This is an Alt-Ctrl game for my second semester graduate course. On the project, I helped work on design along with the 
-											rest of the team. This includes a dog mechanic that we ultimately had to cut. I also worked on the sound design for the game, 
-											including all the music and SFX for the game. The main menu page, cinematic, and tutorial page were also programmed and designed by me - 
-											not inlcuding the art.
-										</p>
-										<audio controls>
-											<source src="audio/goml2.wav" type="audio/wav">
-											Your browser does not support the audio element.
-										</audio>
-										
-									</li>
-								</ul>
+							<ul class="actions stacked">
+								<li>
+									<h2>
+										Gameplay Video
+									</h2>
+									<span class="image fit">
+										<video width="100%" height="100%" controls muted autoplay>
+											<source src="videos/GetOffMyLawnGameplay.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
+								</li>
+								<li>
+									<h2>
+										About the Game
+									</h2>
+									<p>
+										Made in Unreal <br />
+										Team Size: 10 <br />
+										Timeline: about 4 months <br />
+										Worked On: Game Design, Game Audio
+									</p>
+									<p>
+										Nominated for IndieCade 2023 Live Action Award! Also asked to be a part of
+										IndieCade 2023 Night Games!
+									</p>
+									<p>
+										This is an Alt-Ctrl game for my second semester graduate course. On the project, I helped work on design along with the
+										rest of the team. This includes a dog mechanic that we ultimately had to cut. I also worked on the sound design for the game,
+										including all the music and SFX for the game. The main menu page, cinematic, and tutorial page were also programmed and designed by me -
+										not including the art.
+									</p>
+									<p>
+										Here is the main theme I made for the game:
+									</p>
+									<audio controls>
+										<source src="audio/goml2.wav" type="audio/wav">
+										Your browser does not support the audio element.
+									</audio>
+
+								</li>
+								<li>
+									<span class="image fit">
+										<!-- Slideshow container -->
+										<div class="slideshow-container">
+
+											<!-- Full-width images with number and caption text -->
+
+											<div class="mySlides fade">
+												<div class="numbertext">1 / 6</div>
+												<img src="images/goml2.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">2 / 6</div>
+												<img src="images/goml3.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">3 / 6</div>
+												<img src="images/goml4.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">4 / 6</div>
+												<img src="images/goml5.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">5 / 6</div>
+												<img src="images/goml6.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">6 / 6</div>
+												<img src="images/goml7.jpg" style="width:100%">
+											</div>
+										</div>
+										<br>
+									</span>
+								</li>
+							</ul>
 						</section>
 
 					</div>
