--- a/heartofhampstead.html
+++ b/heartofhampstead.html
@@ -36,32 +36,83 @@
 
 						<!-- Content -->
 						<section id="content" class="main">
-							<ul class="features">
-								<span class="image">
-									<img src="images/pic01.png" width="550" height="350" alt="" />
-									<video width="320" height="240" controls>
-										<source src="videos/HeartofHampsteadBuild1.mp4" type="video/mp4">
-										Your browser does not support the video tag.
-									</video>
-								</span>
-									<li>
-										<p>
-											Made in Unity
-											Worked On: Game Design, Game Narrative, Game Programming, etc.
-										</p>
-										<p>
-											This project was for my undergrad capstone class. I designed and planned out the project myself, and got the opportunity to 
-											work with an amazing artist that wanted to work on a game for their own capstone project.
-										</p>
-										<p>
-											As the lead on the project, I designed the short narrative behind the game, as well as many other 
-											aspects including a beliefs system that the player uses at the end of each day, the narrative and character dialogue, and
-											part of the level design. Along with this, I did all of the programming for the game.
-										</p>
-										
-										<a href="https://github.com/NieceyX/HeartofHampstead" class="button">Repository</a>
-									</li>
-								</ul>
+							<ul class="actions stacked">
+								<li>
+									<h2>
+										Gameplay Video
+									</h2>
+									<span class="image fit">
+										<video width="100%" height="100%" controls muted autoplay>
+											<source src="videos/HeartofHampsteadBuild1.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
+								</li>
+
+								<li>
+									<h2>
+										About the Game
+									</h2>
+									<p>
+										Made in Unity <br />
+										Team Size: 2 <br />
+										Timeline: 4-5 months <br />
+										Worked On: Game Design, Game Narrative, Game Programming, etc.
+									</p>
+									<p>
+										This project was for my undergrad capstone class. I designed and planned out the project myself, and got the opportunity to
+										work with an amazing artist that wanted to work on a game for their own capstone project.
+									</p>
+									<p>
+										As the lead on the project, I designed the short narrative behind the game, as well as many other
+										aspects including a beliefs system that the player uses at the end of each day, the narrative and character dialogue, and
+										part of the level design. Along with this, I did all of the programming for the game.
+									</p>
+								</li>
+								<li>
+									<span class="image fit">
+										<!-- Slideshow container -->
+										<div class="slideshow-container">
+
+											<!-- Full-width images with number and caption text -->
+											<div class="mySlides fade">
+												<div class="numbertext">1 / 6</div>
+												<img src="images/hoh1.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">2 / 6</div>
+												<img src="images/hoh2.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">3 / 6</div>
+												<img src="images/hoh3.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">4 / 6</div>
+												<img src="images/hoh4.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">5 / 6</div>
+												<img src="images/hoh5.jpg" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">6 / 6</div>
+												<img src="images/hoh6.png" style="width:100%">
+											</div>
+										</div>
+										<br>
+									</span>
+								</li>
+								<li>
+									<a href="https://github.com/NieceyX/HeartofHampstead" class="button">Repository</a>
+								</li>
+
+							</ul>
 						</section>
 
 					</div>
