--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Deniece Radford</h1>
-						<p>Game Developer<br />
+						<p>Game Designer<br />
 					</header>
 
 				<!-- Nav -->
@@ -44,12 +44,14 @@
 											<h2>Introduction</h2>
 										</header>
 										<p>
-											Hello! I am a Game Developer who focuses on game design and programming.
-											I started with my undergraduate degree in Computer Science, and am now working towards my
-											Masters degree at the University of Utah - Entertainment Arts and Engineering (MEAE).
+											Hello! I'm a game developer who mainly focusses on design. I am currently working towards 
+											my Masters in Entertainment Art and Engineering at the University of Utah. I got my undergrad 
+											degree in Computer Science at Buena Vista University and am passionate about making games! Here 
+											you can find many games I've worked on - even some in progress! Take a look around and feel free 
+											to contact me with my info at the bottom of each page.
 										</p>
 									</div>
-									<span class="image"><img src="images/face.jfif" alt="" /></span>
+									<span class="image"><img src="images/face.jpg" alt="" /></span>
 								</div>
 							</section>
 
@@ -59,18 +61,32 @@
 									<h2>Projects</h2>
 								</header>
 								<ul class="features">
+
 									<li>
-										<span class="image"><img src="images/pic01.png" width="275" height="175" alt="" /></span>
-										<h3>Heart of Hampstead (2022)</h3>
+										<span class="image fit">
+											<a href="parkhourror.html">
+												<img src="images/placeholder.jpg" alt="" class="darker" />
+											</a>
+										</span>
+										<h3>Parkhourror (WIP - Release 2024)</h3>
 									</li>
 									<li>
-										<span class="image"><img src="images/goml.png" width="275" height="175" alt="" /></span>
+										<span class="image fit"">
+											<a href="goml.html">
+												<img src="images/goml2.png" alt="" class="darker" />
+											</a>
+										</span>
 										<h3>Get Off My Lawn (2023)</h3>
 									</li>
 									<li>
-										<span class="image"><img src="images/pic03.png" width="275" height="175" alt="" /></span>
-										<h3>Escape Area 51 (2022)</h3>
+										<span class="image fit">
+											<a href="heartofhampstead.html">
+												<img src="images/hoh6.png" alt="" class="darker" />
+											</a>
+										</span>
+										<h3>Heart of Hampstead (2022)</h3>
 									</li>
+
 								</ul>
 								<a href="projects.html" class="button">See More</a>
 							</section>
