--- a/parkhourror.html
+++ b/parkhourror.html
@@ -38,15 +38,34 @@
 
 						<!-- Content -->
 						<section id="content" class="main">
-							<ul class="features">
+							<ul class="actions stacked">
 								<li>
+									<h2>
+										Gameplay Video
+									</h2>
+									<span class="image fit">
+										<video width="100%" height="100%" controls muted autoplay>
+											<source src="videos/parkhourrorGameplay.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
+								</li>
+								<li>
+									<h2>
+										About the Game
+									</h2>
 									<p>
-										A parkour horror game. Currently being worked on.
+										Made in Unreal <br />
+										Team Size: 12 <br />
+										Timeline: current project <br />
 										Working on: Production, Sound Design
 									</p>
 									<p>
 										So far, I have taken on the role of associate producer, as well as the team's sound designer. I have managed Jira and team
 										stand-ups. Along with this, I have designed sounds and music to be used within the game. Everything is still a work-in-progress, though.
+									</p>
+									<p>
+										Here is the prototype audio I did:
 									</p>
 									<audio controls>
 										<source src="audio/protoSample1.wav" type="audio/wav">
@@ -56,9 +75,43 @@
 										<source src="audio/protoSample2.wav" type="audio/wav">
 										Your browser does not support the audio element.
 									</audio>
-
 								</li>
-								</ul>
+								<li>
+									<h2>
+										Demo video of my audio in-game
+									</h2>
+									<span class="image fit">
+										<video width="100%" height="100%" controls>
+											<source src="videos/parkhourrorMusicVid.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
+								</li>
+								<li>
+									<span class="image fit">
+										<!-- Slideshow container -->
+										<div class="slideshow-container">
+
+											<!-- Full-width images with number and caption text -->
+
+											<div class="mySlides fade">
+												<div class="numbertext">1 / 3</div>
+												<img src="images/park1.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">2 / 3</div>
+												<img src="images/park2.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">3 / 3</div>
+												<img src="images/park4.gif" style="width:100%">
+											</div>
+										</div>
+										<br>
+								</li>
+							</ul>
 						</section>
 
 					</div>
