--- a/projects.html
+++ b/projects.html
@@ -38,27 +38,27 @@
 						<section id="content" class="main">
 							<ul class="features">
 								<li>
-									<span class="image">
+									<span class="image fit">
 										<a href="parkhourror.html">
-											<img src="images/pic05.jpg" width="275" height="175" alt="" class="darker" />
+											<img src="images/placeholder.jpg" alt="" class="darker" />
 										</a>
 									</span>
 									<h3>Parkhourror (WIP - Release 2024)</h3>
 								</li>
 
 								<li>
-									<span class="image">
+									<span class="image fit">
 										<a href="goml.html">
-											<img src="images/goml.png" width="275" height="175" alt="" class="darker" />
+											<img src="images/goml2.png"  alt="" class="darker" />
 										</a>
 									</span>
 									<h3>Get Off My Lawn (2023)</h3>
 								</li>
 
 								<li>
-									<span class="image">
+									<span class="image fit">
 										<a href="release.html">
-											<img src="images/pic02.PNG" width="275" height="175" alt="" class="darker" />
+											<img src="images/release1.PNG" alt="" class="darker" />
 										</a>
 									</span>
 									<h3>Release (2022)</h3>
@@ -71,31 +71,33 @@
 						<section id="content" class="main">
 							<ul class="features">
 								<li>
-									<span class="image">
+									<span class="image fit">
 										<a href="escapearea51.html">
-											<img src="images/pic03.png" width="275" height="175" alt="" class="darker" />
+											<img src="images/escape1.png" alt="" class="darker" />
 										</a>
 									</span>
 									<h3>Escape Area 51 (2022)</h3>
 								</li>
 
 								<li>
-									<span class="image">
+									<span class="image fit">
 										<a href="heartofhampstead.html">
-											<img src="images/pic01.png" width="275" height="175" alt="" class="darker" />
+											<img src="images/hoh6.png" alt="" class="darker" />
 										</a>
 									</span>
 									<h3>Heart of Hampstead (2022)</h3>
 								</li>
 
+								<!--
 								<li>
-									<span class="image">
+									<span class="image fit">
 										<a href="guerriere.html">
-											<img src="images/pic05.png" width="275" height="175" alt="" class="darker" />
+											<img src="images/pic05.png"alt="" class="darker" />
 										</a>
 									</span>
 									<h3>Guerriere (2020)</h3>
 								</li>
+								-->
 							</ul>
 						</section>
 
