--- a/audio.html
+++ b/audio.html
@@ -40,7 +40,9 @@
 						<section id="content" class="main">
 							<ul class="features">
 								<li>
-									<span class="image"><img src="images/goml.png" width="275" height="175" alt="" /></span>
+									<span class="image fit">
+										<img src="images/goml1.png" width="275" height="175" alt="" />
+									</span>
 									<h3>Get Off My Lawn (2023)</h3>
 									<audio controls>
 										<source src="audio/goml2.wav" type="audio/wav">
@@ -48,8 +50,10 @@
 									</audio>
 								</li>
 								<li>
-									<span class="image"><img src="images/pic05.jpg" width="275" height="175" alt="" /></span>
-									<h3>"Parkhourror" (WIP)</h3>
+									<span class="image fit">
+										<img src="images/placeholder.jpg" width="275" height="175" alt="" />
+									</span>
+									<h3>"Parkhourror" Prototype Audio</h3>
 									<audio controls>
 										<source src="audio/protoSample1.wav" type="audio/wav">
 										Your browser does not support the audio element.
@@ -58,6 +62,12 @@
 										<source src="audio/protoSample2.wav" type="audio/wav">
 										Your browser does not support the audio element.
 									</audio>
+									<span class="image fit">
+										<video width="100%" height="100%" controls>
+											<source src="videos/parkhourrorMusicVid.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
 								</li>
 							</ul>
 						</section>
@@ -70,10 +80,12 @@
 										One Giant Leap is an undergrad project where we had to create the music for the short, with the foley
 										already existing within the video.
 									</p>
-									<video width="320" height="240" controls>
-										<source src="audio/giantLeap.mp4" type="video/mp4">
-										Your browser does not support the video tag.
-									</video>
+									<span class="image fit">
+										<video width="100%" height="100%" controls>
+											<source src="audio/giantLeap.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
 								</li>
 								<li>
 									<h3>Other Projects - Just Audio</h3>
