--- a/escapearea51.html
+++ b/escapearea51.html
@@ -36,31 +36,71 @@
 
 						<!-- Content -->
 						<section id="content" class="main">
-							<ul class="features">
-								<span class="image">
-									<img src="images/pic03.png" width="550" height="350" alt="" />
-									<video width="320" height="240" controls>
-										<source src="videos/ArcadeGame.mp4" type="video/mp4">
-										Your browser does not support the video tag.
-									</video>
-								</span>
-									<li>
-										<p>
-											Worked On: Game Design, Game Programming
-										</p>
-										<p>
-											This was the very first project we did for my graduate program. We were prompted to iterate upon an 
-											old arcade game. The game we chose was Moon Patrol
-										</p>
-										<p>
-											This was a smaller group, and we all had a hand in choosing what game we itereated on, as well as the design for our own game. 
-											I was the one to program much of the game, and I worked closely with the others to design it as well. We went through a lot of different ideas 
-											before landing upon aliens and Moon Patrol.
-										</p>
-										
-										<a href="https://github.com/NieceyX/ArcadeGame" class="button">Repository</a>
+							<ul class="actions stacked">
+								<li>
+									<h2>
+										Gameplay Video
+									</h2>
+									<span class="image fit">
+										<video width="100%" height="100%" controls muted autoplay>
+											<source src="videos/ArcadeGame.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
+								</li>
+
+								<li>
+									<h2>
+										About the Game
+									</h2>
+									<p>
+										Made in Unity <br />
+										Team Size: 5 <br />
+										Timeline: about 3 weeks <br />
+										Worked On: Game Design, Game Programming
+									</p>
+									<p>
+										This was the very first project we did for my graduate program. We were prompted to iterate upon an
+										old arcade game. The game we chose was Moon Patrol
+									</p>
+									<p>
+										This was a smaller group, and we all had a hand in choosing what game we itereated on, as well as the design for our own game.
+										I was the one to program much of the game, and I worked closely with the others to design it as well. We went through a lot of different ideas
+										before landing upon aliens and Moon Patrol.
+									</p>
+
+									<a href="https://github.com/NieceyX/ArcadeGame" class="button">Repository</a>
+								</li>
+								<li>
+									<span class="image fit">
+										<!-- Slideshow container -->
+										<div class="slideshow-container">
+
+											<!-- Full-width images with number and caption text -->
+
+											<div class="mySlides fade">
+												<div class="numbertext">1 / 4</div>
+												<img src="images/escape1.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">2 / 4</div>
+												<img src="images/escape2.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">3 / 4</div>
+												<img src="images/escape3.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">4 / 4</div>
+												<img src="images/escape4.png" style="width:100%">
+											</div>
+										</div>
+										<br>
 									</li>
-								</ul>
+							</ul>
 						</section>
 
 					</div>
