--- a/release.html
+++ b/release.html
@@ -39,27 +39,69 @@
 
 						<!-- Content -->
 						<section id="content" class="main">
-							<ul class="features">
-									<span class="image">
-										<img src="images/pic02.PNG" width="550" height="350" alt="" />
+							<ul class="actions stacked">
+								<li>
+									<h2>
+										Gameplay Video
+									</h2>
+									<span class="image fit">
+										<video width="100%" height="100%" controls muted autoplay>
+											<source src="videos/releaseTrailer.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
 									</span>
-									<li>
-										<p>
-											Made in Unreal
-											Worked On: Game Design, Game Programming
-										</p>
-										<p>
-											The team disscused as a whole what our direction was going to be, given the restriction of it being a serious game. We decided on a rage room and
-											a music therepy room.
-										</p>
-										<p>
-											I helped design and programmed the music orbs. After the player destroys what they would like in the glass rage room, they move on to the soothing
-											music room. Being in VR, the player is able to reach out and touch the orbs. Doing so plays a note, and they can make their own melody to the background
-											music by touching many of the orbs in whatever pattern they like.
-										</p>
-										<a href="https://github.com/NieceyX/SeriousGame" class="button">Repository</a>
-									</li>
-								</ul>
+								</li>
+								<li>
+									<h2>
+										About the Game
+									</h2>
+									<p>
+										Made in Unreal <br />
+										Team Size: 5 <br />
+										Timeline: about 3 weeks <br />
+										Worked On: Game Design, Game Programming
+									</p>
+									<p>
+										The team disscused as a whole what our direction was going to be, given the restriction of it being a serious game. We decided on a rage room and
+										a music therepy room.
+									</p>
+									<p>
+										I helped design and programmed the music orbs. After the player destroys what they would like in the glass rage room, they move on to the soothing
+										music room. Being in VR, the player is able to reach out and touch the orbs. Doing so plays a note, and they can make their own melody to the background
+										music by touching many of the orbs in whatever pattern they like.
+									</p>
+									<a href="https://github.com/NieceyX/SeriousGame" class="button">Repository</a>
+								</li>
+								<li>
+									<span class="image fit">
+										<!-- Slideshow container -->
+										<div class="slideshow-container">
+
+											<!-- Full-width images with number and caption text -->
+
+											<div class="mySlides fade">
+												<div class="numbertext">1 / 4</div>
+												<img src="images/release1.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">2 / 4</div>
+												<img src="images/release2.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">3 / 4</div>
+												<img src="images/release3.png" style="width:100%">
+											</div>
+
+											<div class="mySlides fade">
+												<div class="numbertext">4 / 4</div>
+												<img src="images/release4.png" style="width:100%">
+											</div>
+										</div>
+										<br>
+								</li>
+							</ul>
 						</section>
 
 					</div>
